--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -51,7 +51,7 @@ html, body{
 #header-container {
     position: fixed;
     height: 50px;
-    background: #20649E;
+    /*background: #20649E;*/
     z-index: 3;
     box-shadow: 0 0 4px -1px #232323;
     width: 100%;
@@ -60,7 +60,6 @@ html, body{
 #workspace-container {
     position: relative;
     z-index: 2;
-    padding-top: 50px;
 }
 
 #footer-container {
